--- a/src/pedidos.html
+++ b/src/pedidos.html
@@ -15,7 +15,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 
-<body>
+<body onload="fazRequisicao('cotacao')">
 
     <!--CABEÇALHO-->
     <header>
@@ -30,7 +30,6 @@
                         <span class="navbar-toggler-icon"></span>
                     </button>
                     <div class="collapse navbar-collapse" id="navbarSupportedContent">
-
                         <ul class="navbar-nav me-auto  mb-lg-0">
                             <li class="nav-item">
                                 <a class="nav-link" aria-current="page" href="index.html">Home</a>
@@ -104,7 +103,7 @@
                     <th scope="col">Tipo de serviço</th>
                   </tr>
                 </thead>
-                <tbody>
+                <tbody id="paiPlanilha">
                   <tr>
                     <th scope="row">1</th>
                     <td>Exemplo de nome</td>
@@ -239,7 +238,7 @@
             <p style="color: #ffffff;">© 2009-2023 Zucco</p>
         </div>
     </footer>
-    <script src="script.js"></script>
+    <script src="script/script.js"></script>
 </body>
 
 </html>
