--- a/src/cidadesatendidas.html
+++ b/src/cidadesatendidas.html
@@ -19,6 +19,7 @@
         integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe"
+      <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
         crossorigin="anonymous"></script>
     <link rel="stylesheet" href="style.css">
 </head>
@@ -78,12 +79,12 @@
         <div class="container my-3">
             <div class="row">
               <div class="col">
-                <div class="accordion" id="accordionExample1">
-                  <div class="accordion-item">
-                    <h2 class="accordion-header" id="headingOne">
-                      <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
-                        Estados
-                      </button>
+                <div class="accordion" id="accordionPanelsStayOpenExample">
+  <div class="accordion-item">
+    <h2 class="accordion-header">
+      <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#panelsStayOpen-collapseOne" aria-expanded="true" aria-controls="panelsStayOpen-collapseOne">
+        Estados
+      </button>
                     </h2>
                     <div id="collapseOne" class="accordion-collapse collapse show" aria-labelledby="headingOne" data-bs-parent="#accordionExample1">
                       <div class="accordion-body">
@@ -158,54 +159,60 @@
               </div>
             </div>
           </div>
-<figure class="text-center mt-5">
-  <h2>TEMPO DE ENTREGA</h2>
-</figure>
 <div class="container">
-  <div class="card">
-    <div class="card-body">
-      <div class="container">
-        <h5 class="text-center">Selecione o seu estado:</h5>
-        <div class="form-group">
-          <label for="estado"></label>
-          <select class="form-control" id="estado" onchange="atualizarTempoEntrega()">
-            <option value="SP">São Paulo</option>
-            <option value="SC">Santa Catarina</option>
-            <option value="MG">Minas Gerais</option>
-            <option value="PR">Paraná</option>
-          </select>
+  <div class="row">
+    <div class="col-sm-6">
+      <figure class="text-center mt-5">
+        <h2>TEMPO DE ENTREGA</h2>
+      </figure>
+      <div class="card">
+        <div class="card-body">
+          <div class="container">
+            <h5 class="text-center">Selecione o seu estado:</h5>
+            <div class="form-group">
+              <label for="estado"></label>
+              <select class="form-control" id="estado" onchange="atualizarTempoEntrega()">
+                <option value="SP">São Paulo</option>
+                <option value="SC">Santa Catarina</option>
+                <option value="MG">Minas Gerais</option>
+                <option value="PR">Paraná</option>
+              </select>
+            </div>
+          </div>
+        </div>
+        <div class="card-body">
+          <div id="tempo-entrega" class="text-center"></div>
         </div>
       </div>
     </div>
-    <div class="card-body">
-      <div id="tempo-entrega" class="text-center"></div>
-    </div>
-  </div>
-</div>
-<figure class="text-center mt-5">
-  <h2>VALOR DO FRETE</h2>
-</figure>
-<div class="container">
-  <div class="card">
-    <div class="card-body">
-      <div class="container">
-        <h5 class="text-center">Selecione o seu estado:</h5>
-        <div class="form-group">
-          <label for="estado"></label>
-          <select class="form-control" id="estado" onchange="valorFrete()">
-            <option value="SP">São Paulo</option>
-            <option value="SC">Santa Catarina</option>
-            <option value="MG">Minas Gerais</option>
-            <option value="PR">Paraná</option>
-          </select>
+
+    <div class="col-sm-6">
+      <figure class="text-center mt-5">
+        <h2>VALOR DO FRETE</h2>
+      </figure>
+      <div class="card">
+        <div class="card-body">
+          <div class="container">
+            <h5 class="text-center">Selecione o seu estado:</h5>
+            <div class="form-group">
+              <label for="EStado"></label>
+              <select class="form-control" id="EStado" onchange="atualizarValorTransporte()">
+                <option value="mg">Minas Gerais</option>
+                <option value="pr">Paraná</option>
+                <option value="sp">São Paulo</option>
+                <option value="sc">Santa Catarina</option>
+              </select>
+            </div>
+          </div>
+        </div>
+        <div class="card-body">
+          <div id="valor-transporte" class="text-center"></div>
         </div>
       </div>
     </div>
-    <div class="card-body">
-      <div id="tempo-entrega" class="text-center"></div>
-    </div>
   </div>
 </div>
+
         </main>
                
     <!--RODAPÉ-->
@@ -343,6 +350,28 @@
                     return 2;
                 default:
                     return "N/A";
+            }
+        }
+    </script>
+   <script>
+        function atualizarValorTransporte() {
+            var EStado = document.getElementById("EStado").value;
+            var valorTransporte = calcularValorTransporte(EStado);
+            document.getElementById("valor-transporte").innerHTML = "Valor do frete: R$ " + valorTransporte.toFixed(2);
+        }
+
+        function calcularValorTransporte(EStado) {
+            switch (EStado) {
+                case "mg":
+                    return 30.00;
+                case "pr":
+                    return 20.00;
+                case "sp":
+                    return 40.00;
+                case "sc":
+                    return 20.00;
+                default:
+                    return 0.00;
             }
         }
     </script>
