--- a/src/trabalheconosco.html
+++ b/src/trabalheconosco.html
@@ -77,7 +77,7 @@
                 <label for="senha">Senha:</label>
                 <input type="password" id="senha">
                 <br><br>
-                <button id="btnacessar">acessar</button>
+                <input type="submit" value="Acessar">
               </form>
             </div>
           </div>
