--- a/src/cidadesatendidas.html
+++ b/src/cidadesatendidas.html
@@ -2,14 +2,7 @@
 <html lang="pt-br">
 
 <head>
-  <style>
-  .center {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 100vh;
-  }
-</style>
+
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -79,14 +72,14 @@
         <div class="container my-3">
             <div class="row">
               <div class="col">
-                <div class="accordion" id="accordionPanelsStayOpenExample">
+                <div class="accordion">
   <div class="accordion-item">
     <h2 class="accordion-header">
       <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#panelsStayOpen-collapseOne" aria-expanded="true" aria-controls="panelsStayOpen-collapseOne">
         Estados
       </button>
                     </h2>
-                    <div id="collapseOne" class="accordion-collapse collapse show" aria-labelledby="headingOne" data-bs-parent="#accordionExample1">
+                    <div  class="accordion-collapse collapse show" aria-labelledby="headingOne" data-bs-parent="#accordionExample1">
                       <div class="accordion-body">
                         <div class="d-grid gap-2">
                           <button class="btn btn-light" type="button">São Paulo</button>
@@ -101,9 +94,9 @@
               </div>
         
               <div class="col">
-                <div class="accordion" id="accordionExample2">
+                <div class="accordion">
                   <div class="accordion-item">
-                    <h2 class="accordion-header" id="headingTwo">
+                    <h2 class="accordion-header" >
                       <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseTwo" aria-expanded="true" aria-controls="collapseTwo">
                         Regiões
                       </button>
@@ -332,6 +325,7 @@
         </div>
     </footer>
     <script src="script.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz" crossorigin="anonymous"></script>
      <script>
         function atualizarTempoEntrega() {
             var estado = document.getElementById("estado").value;
