--- a/src/cidadesatendidas.html
+++ b/src/cidadesatendidas.html
@@ -2,7 +2,6 @@
 <html lang="pt-br">
 
 <head>
-
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -12,7 +11,6 @@
         integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe"
-      <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
         crossorigin="anonymous"></script>
     <link rel="stylesheet" href="style.css">
 </head>
@@ -72,14 +70,14 @@
         <div class="container my-3">
             <div class="row">
               <div class="col">
-                <div class="accordion">
-  <div class="accordion-item">
-    <h2 class="accordion-header">
-      <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#panelsStayOpen-collapseOne" aria-expanded="true" aria-controls="panelsStayOpen-collapseOne">
-        Estados
-      </button>
+                <div class="accordion" id="accordionExample1">
+                  <div class="accordion-item">
+                    <h2 class="accordion-header" id="headingOne">
+                      <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
+                        Estados
+                      </button>
                     </h2>
-                    <div  class="accordion-collapse collapse show" aria-labelledby="headingOne" data-bs-parent="#accordionExample1">
+                    <div id="collapseOne" class="accordion-collapse collapse show" aria-labelledby="headingOne" data-bs-parent="#accordionExample1">
                       <div class="accordion-body">
                         <div class="d-grid gap-2">
                           <button class="btn btn-light" type="button">São Paulo</button>
@@ -94,9 +92,9 @@
               </div>
         
               <div class="col">
-                <div class="accordion">
+                <div class="accordion" id="accordionExample2">
                   <div class="accordion-item">
-                    <h2 class="accordion-header" >
+                    <h2 class="accordion-header" id="headingTwo">
                       <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseTwo" aria-expanded="true" aria-controls="collapseTwo">
                         Regiões
                       </button>
@@ -152,7 +150,7 @@
               </div>
             </div>
           </div>
-<div class="container">
+          <div class="container">
   <div class="row">
     <div class="col-sm-6">
       <figure class="text-center mt-5">
@@ -178,7 +176,6 @@
         </div>
       </div>
     </div>
-
     <div class="col-sm-6">
       <figure class="text-center mt-5">
         <h2>VALOR DO FRETE</h2>
@@ -205,7 +202,6 @@
     </div>
   </div>
 </div>
-
         </main>
                
     <!--RODAPÉ-->
@@ -325,8 +321,7 @@
         </div>
     </footer>
     <script src="script.js"></script>
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz" crossorigin="anonymous"></script>
-     <script>
+   <script>
         function atualizarTempoEntrega() {
             var estado = document.getElementById("estado").value;
             var tempoEntrega = calcularTempoEntrega(estado);
@@ -335,11 +330,11 @@
         function calcularTempoEntrega(estado) {
             switch (estado) {
                 case "SP":
-                    return 4;
+                    return 3;
                 case "SC":
                     return 2;
                 case "MG":
-                    return 3;
+                    return 4;
                 case "PR":
                     return 2;
                 default:
@@ -357,11 +352,11 @@
         function calcularValorTransporte(EStado) {
             switch (EStado) {
                 case "mg":
-                    return 30.00;
+                    return 40.00;
                 case "pr":
                     return 20.00;
                 case "sp":
-                    return 40.00;
+                    return 30.00;
                 case "sc":
                     return 20.00;
                 default:
