--- a/src/cadastro.html
+++ b/src/cadastro.html
@@ -70,48 +70,22 @@
     
     <main>
         <div id="main">
-            <div class="container-fluid">
+            <div class="container-fluid" id="conteudocadastro">
                 <div class="row">
                     <div class="col-md-5" id="">
 
-                        <div class="card_queroTrabalhar">
-                            <div class="content">
-                                <h4>Cadastro</h4>
-                                <div class="mb-3">
-                                    <label for="exampleFormControlTextarea1" class="form-label">Nome</label>
-                                    <textarea class="form-control" id="exampleFormControlTextarea1" rows="1"placeholder="Nome completo"></textarea></textarea>
-                                  </div>
-                                  <div class="mb-3">
-                                    <label for="exampleFormControlInput1" class="form-label">E-mail</label>
-                                    <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="Digite seu e-mail">
-                                  </div>
-                                  <div class="mb-3">
-                                    <label for="exampleFormControlTextarea1" class="form-label">Celular</label>
-                                    <textarea class="form-control" id="exampleFormControlTextarea1" rows="1" placeholder="Celular"></textarea>
-                                  </div>
-                                  <div class="mb-3">
-                                    <label for="exampleFormControlTextarea1" class="form-label">CPF</label>
-                                    <textarea class="form-control" id="exampleFormControlTextarea1" rows="1" placeholder="Informe seu CPF"></textarea>
-                                  </div>
-                                  <div class="mb-3">
-                                    <label for="exampleFormControlTextarea1" class="form-label">Senha</label>
-                                    <textarea class="form-control" id="exampleFormControlTextarea1" rows="1" placeholder=""></textarea>
-                                  </div>
-                                  <div class="mb-3">
-                                    <label for="exampleFormControlTextarea1" class="form-label">Confirmação de senha</label>
-                                    <textarea class="form-control" id="exampleFormControlTextarea1" rows="1" placeholder=""></textarea>
-                                  </div>
-                                  <body onload="generateCaptcha()">
-                                    <form onsubmit="return validateCaptcha()">
-                                        <img id="captchaImage" src="" alt="CAPTCHA Image">
-                                        <br>
-                                        <input type="text" id="captchaInput" required>
-                                        <input type="hidden" id="captchaText">
-                                        <input type="submit" value="Enviar">
-                                    </form>
-                                </body>
-                            </div>
-                        </div>
+                        <section id="formscadastro">
+                            <h3>Informe seus dados</h3>
+                            <form method="post">
+                                <label id="identificacaoformulario">Nome</label>
+                                <input type="text" name="name" placeholder="Digite seu nome" autocomplete="off" required id="preencherformulario">
+                                <label id="identificacaoformulario">Email</label>
+                                <input type="email" name="email" placeholder="Digite seu email" autocomplete="off" required id="preencherformulario">
+                                <label id="identificacaoformulario">Telefone</label>
+                                <input type="text" name="phone" placeholder="Digite seu telefone" autocomplete="off" required id="preencherformulario">
+                                <button id="btnformulario" type="submit">Enviar</button>
+                            </form>
+                        </section>
                 
                     </div>
                     <div class="col-md-7" id="imagemCadastro">
