--- a/src/index.html
+++ b/src/index.html
@@ -78,7 +78,7 @@
                 <label for="senha">Senha:</label>
                 <input type="password" id="senha">
                 <br><br>
-                <input type="submit" value="Acessar">
+                <input type="submit" value="Acessar" onclick="logar(); return false">
               </form>
             </div>
           </div>
