--- a/src/cadastro.html
+++ b/src/cadastro.html
@@ -2,89 +2,95 @@
 <html lang="pt-br">
 
 <head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Zucco Transportes</title>
-  <link rel="icon" href="img/logos/favicon_io/favicon-16x16.png">
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet"
-    integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"
-    integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe"
-    crossorigin="anonymous"></script>
-  <link rel="stylesheet" href="style.css">
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Zucco Transportes</title>
+    <link rel="icon" href="img/logos/favicon_io/favicon-16x16.png">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe"
+        crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
 
     <!--CABEÇALHO-->
-  <header>
-    <nav class="navbar navbar-expand-xxl">
-        <nav class="navbar fixed-top" style="background-color: #b22222;">
-            <div class="container-fluid">
-                <a class="navbar-brand me-5" href="index.html"><img id="" src="img/zucco-removebg-preview.png" alt=""></a>
-                <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
-                    data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
-                    aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
-                <div class="collapse navbar-collapse" id="navbarSupportedContent">
+    <header>
+        <nav class="navbar navbar-expand-xxl">
+            <nav class="navbar fixed-top" style="background-color: #b22222;">
+                <div class="container-fluid">
+                    <a class="navbar-brand me-5" href="index.html"><img id="" src="img/zucco-removebg-preview.png"
+                            alt=""></a>
+                    <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                        data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
+                        aria-expanded="false" aria-label="Toggle navigation">
+                        <span class="navbar-toggler-icon"></span>
+                    </button>
+                    <div class="collapse navbar-collapse" id="navbarSupportedContent">
 
-                    <ul class="navbar-nav me-auto  mb-lg-0">
-                        <li class="nav-item">
-                            <a class="nav-link" aria-current="page" href="index.html">Home</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="sobrenos.html">Sobre nós</a>
-                        </li>
+                        <ul class="navbar-nav me-auto  mb-lg-0">
+                            <li class="nav-item">
+                                <a class="nav-link" aria-current="page" href="index.html">Home</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="sobrenos.html">Sobre nós</a>
+                            </li>
 
-                        <li class="nav-item">
-                            <a class="nav-link" href="servicos.html">servicos</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="ondeestamos.html">Onde Estamos</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="trabalheconosco.html">Trabalhe conosco</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="cidadesatendidas.html">Cidades atendidas</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="contato.html">Contato</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link me-5" href="cadastro.html">Cadastro</a>
-                        </li>
-                    </ul>
+                            <li class="nav-item">
+                                <a class="nav-link" href="servicos.html">servicos</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="ondeestamos.html">Onde Estamos</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="trabalheconosco.html">Trabalhe conosco</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="cidadesatendidas.html">Cidades atendidas</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="contato.html">Contato</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link me-5" href="cadastro.html">Cadastro</a>
+                            </li>
+                        </ul>
+                    </div>
                 </div>
-            </div>
+            </nav>
         </nav>
-    </nav>
-</header>
+    </header>
 
     <figure class="text-center mt-3">
         <h1>Criar conta</h1>
         <!--TODAS AS PAGS-->
     </figure>
-    
+
     <main>
         <div class="container" id="conteudocadastro">
-            <div class="col" id="formulariocadastro">
+            <div class="col-md-5" id="formulariocadastro">
                 <form action="" method="post" id="conteudoformscadastro">
-                    <label for="firstname">Nome completo</label>
-                        <input id="firstname" type="text" name="firstname" placeholder="Digite seu primeiro nome" required>
-                        <label for="email">E-mail</label>
-                        <input id="email" type="email" name="email" placeholder="Digite seu e-mail" required>
-                        <label for="number">Celular</label>
-                        <input id="number" type="tel" name="number" placeholder="(xx) xxxx-xxxx" required>
-                        <label for="password">Senha</label>
-                        <input id="password" type="password" name="password" placeholder="Digite sua senha" required>
-                        <label for="confirmPassword">Confirme sua Senha</label>
-                        <input id="confirmPassword" type="password" name="confirmPassword" placeholder="Digite sua senha novamente" required>
+                    <label class="identificacaoformulario">Nome</label>
+                    <input type="text" name="name" placeholder="Digite seu nome completo" autocomplete="off" required
+                        class="formscadastro">
+                    <label class="identificacaoformulario">Email</label>
+                    <input type="email" name="email" placeholder="Digite seu email" autocomplete="off" required
+                        class="formscadastro">
+                    <label class="identificacaoformulario">Telefone</label>
+                    <input type="text" name="phone" placeholder="Digite seu telefone" autocomplete="off" required
+                        class="formscadastro">
+                    <label class="identificacaoformulario" for="password">Senha</label>
+                    <input id="password" type="password" name="password" placeholder="Digite sua senha" required
+                        class="formscadastro">
+                    <label class="identificacaoformulario" for="confirmPassword">Confirmação</label>
+                    <input id="confirmPassword" type="password" name="confirmPassword"
+                        placeholder="Digite sua senha novamente" required class="formscadastro">
                 </form>
             </div>
-            <div class="col" id="imagemcadastro">
+            <div class="col-md-7" id="imagemcadastro">
                 <img src="img/imgcadastro.jpg" alt="">
             </div>
         </div>
@@ -208,4 +214,5 @@
     </footer>
     <script src="script.js"></script>
 </body>
+
 </html>
