--- a/src/pedidos.html
+++ b/src/pedidos.html
@@ -9,16 +9,13 @@
     <link rel="icon" href="img/logos/favicon_io/favicon-16x16.png">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe"
-        crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="style.css">
+
+    <!-- <link rel="stylesheet" href="style.css"> -->
 </head>
-
-<body onload="fazRequisicao('cotacao')">
-
+<!--  -->
+<body onload="pegaDados()">
     <!--CABEÇALHO-->
-    <header>
+    <!-- <header>
         <nav class="navbar navbar-expand-xxl">
             <nav class="navbar fixed-top" style="background-color: #b22222;">
                 <div class="container-fluid">
@@ -64,64 +61,64 @@
                 </div>
             </nav>
         </nav>
-        <div id="modal" class="modal">
-            <div class="modal-content">
-              <span class="close">&times;</span>
-              <h5 id="mensagemlogin">Acessar</h5>
-              <form>
-                <label for="login">E-mail:</label>
-                <input type="text" id="login">
-                <br>
-                <br>
-                <label for="senha">Senha:</label>
-                <input type="password" id="senha">
-                <br><br>
-                <input type="submit" value="Acessar">
-              </form>
-            </div>
-          </div>
-    </header>
+    </header> -->
     <main>
-        <figure class="text-center">
-            <h1 id="sobreZucco" class="mt-5">Planilha de pedidos</h1>
-            <!--TODAS AS PAGS-->
-        </figure>
+        <h1 id="sobreZucco" class="mt-2 text-center">Planilha de pedidos</h1>
+        <!--TODAS AS PAGS-->
 
         <div class="container">
             <table class="table">
                 <thead>
-                  <tr>
-                    <th scope="col">#</th>
-                    <th scope="col">Nome</th>
-                    <th scope="col">Nº do pedido</th>
-                    <th scope="col">E-mail</th>
-                    <th scope="col">Celular</th>
-                    <th scope="col">CPF</th>
-                    <th scope="col">CNPJ</th>
-                    <th scope="col">Cidade de Origem</th>
-                    <th scope="col">Cidade de Destino</th>
-                    <th scope="col">Tipo de serviço</th>
-                  </tr>
+                    <tr>
+                        <th scope="col">#</th>
+                        <th scope="col">#</th>
+                        <th scope="col">Nome</th>
+                        <th scope="col">Nº do pedido</th>
+                        <th scope="col">E-mail</th>
+                        <th scope="col">Celular</th>
+                        <th scope="col">CPF</th>
+                        <th scope="col">CNPJ</th>
+                        <th scope="col">Cidade de Origem</th>
+                        <th scope="col">Cidade de Destino</th>
+                        <th scope="col">Tipo de serviço</th>
+                        <th scope="col" colspan="4" class="text-center">Ações</th>
+                    </tr>
                 </thead>
                 <tbody id="paiPlanilha">
-                  <tr>
-                    <th scope="row">1</th>
-                    <td>Exemplo de nome</td>
-                    <td>000-1</td>
-                    <td>email.exemplo@nome.empresa.com</td>
-                    <td>(99) 99999-9999</td>
-                    <td>123.456.789-10</td>
-                    <td>12.345.678/0001-99</td>
-                    <td>Contagem-MG</td>
-                    <td>Flores da Cunha-RS</td>
-                    <td>Cotação</td>
-                  </tr>
+                    <tr>
+                        <th scope="row">1</th>
+                        <td>Exemplo de nome</td>
+                        <td>000-1</td>
+                        <td>email.exemplo@nome.empresa.com</td>
+                        <td>(99) 99999-9999</td>
+                        <td>123.456.789-10</td>
+                        <td>12.345.678/0001-99</td>
+                        <td>Contagem-MG</td>
+                        <td>Flores da Cunha-RS</td>
+                        <td>Cotação</td>
+                        <td><button class="btn btn-danger">Apagar</button></td>
+                        <td><button class="btn btn-warning" type="button" data-bs-toggle="modal" data-bs-target="#modalEditar">Editar</button></td>
+                        <!-- <div class="modal" id="modalEditar">
+                            <div class="modal-dialog">
+                                <div class="modal-content">
+                                    <div class="modal-header">
+                                        <h3>Editar informações</h3>
+                                        <button class="btn btn-close" data-bs-dismiss="modal"></button>
+                                    </div>
+                                    <div class="modal-body">
+                                        <p>Teste</p>
+                                    </div>
+                                    <div class="modal-footer">
+                                        <button class="btn btn-light">Enviar</button>
+                                    </div>
+                                </div>
+                            </div>
+                        </div> -->
+                    </tr>
                 </tbody>
-              </table>
+            </table>
         </div>
     </main>
-
-
     <!--RODAPÉ-->
     <footer id="footercontato">
         <div class="container-fluid bg-light pt-3 pb-4 mt-3">
@@ -239,6 +236,9 @@
         </div>
     </footer>
     <script src="script/script.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe"
+        crossorigin="anonymous"></script>
 </body>
 
 </html>
