--- a/src/contato.html
+++ b/src/contato.html
@@ -95,7 +95,7 @@
               </div>
 
               <div class="form-floating mb-3">
-                <textarea class="form-control" placeholder="Telefone" id="floatingTextarea2"></textarea>
+                <textarea class="form-control" data-js="phone" placeholder="Telefone" id="floatingTextarea2"></textarea>
                 <label for="floatingTextarea2">Telefone</label>
               </div>
 
@@ -236,5 +236,6 @@
     </div>
   </footer>
   <script src="script.js"></script>
+  <script src="/src/script/validacoes.js"></script>
 </body>
 </html>
