--- a/src/formularioServicos.html
+++ b/src/formularioServicos.html
@@ -279,7 +279,7 @@
     </footer>
     <!-- <script src="/src/script/validacoes.js"></script> -->
     <script src="/src/script/requisicoes.js"></script>
-    <script src="/src/script/validacoes.js"></script>
+    <!--<script src="/src/script/validacoes.js"></script>-->
     <script src="script/script.js"></script>
     <script src="script/modoNoturno.js"></script>
 </body>
